--- a/client/src/assets/css/footer.css
+++ b/client/src/assets/css/footer.css
@@ -5,6 +5,7 @@
     background-color: #202020;
     height: 57vh;
     font-family: 'Montserrat', sans-serif;
+    padding-top: 32px;
 }
 
 .footer-1{
