--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -24,12 +24,14 @@
 .nav-links a{
     margin: 0px 30px;
     font-size: 18px;
+    text-decoration: none;
+    color: #484746;
 }
 
 .signup-btn{
     align-items: center;
     background: #E1C7AA;
-    color: white;
+    color: white!important;
     padding: 2px 10px 10px 10px;
     border-radius: 10px;
 
