--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -11,44 +11,53 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     width: 20%;
-    background-color: #484746;
 }
 
 .dashboard-right{
     display: flex;
     width: 80%;
+    padding-top: 80px;
 }
 
 .logosection{
     background-color: white;
     width: 100%;
+    margin: 16px auto;
 }
 
-.linksection{
+.linkssection{
+    background-color: #484746;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px 24px 0px 0px;
+    padding-top: 24px;
+}
 
+.logout{
+    justify-self:auto;
 }
 
 .link {
     display: flex;
     flex-direction: row;
-    /* width: 50%; */
+    align-items: center;
     /* justify-content: center; */
     width: 100%;
     font-family: 'Montserrat', sans-serif;
-    margin: 40px 0px 40px 0px;
+    font-size: 28px;
+    margin: 24px auto;
+    margin-left: 44px;
+    text-align: start;
 }
 
 .link a{
     color: white;
     margin: 0;
-    margin-left: 30px;
+    margin-left: 24px;
 }
 
 .calendar-section{
@@ -56,24 +65,44 @@
     flex-direction: row;
     width: 100%;
     height: 50%;
+    margin-top: 0px;
 }
 
 .welcome{
     width: 30%;
+    padding-left: 24px;
 }
 
 .welcome-info{
-    border-right: 1px solid black;
+    border-right: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    font-family: 'Montserrat', sans-serif;
+}
+.welcome-info h1{
+    font-size: 64px;
+    color: #C89A69;
+    margin: 0%;
+}
+.welcome-info h3{
+    font-size: 32px;
+    margin: 8px 0px;
+}
+.welcome-info p{
+    font-size: 24px;
+    margin: 0%;
 }
 
 .welcome-ops{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 32px;
 }
-
-.welcome-ops button{
-    width: 80%;
+.welcome-ops div{
+    margin-bottom: 16px;
 }
 
 .calendar{
@@ -110,3 +139,4 @@
     background-color: #F8F8F8;
     border-radius: 10px;
 }
+
