--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -18,6 +18,7 @@
 
 .dashboard-right{
     display: flex;
+    flex-direction: column;
     width: 80%;
 }
 
@@ -110,3 +111,98 @@
     background-color: #F8F8F8;
     border-radius: 10px;
 }
+
+.cases-section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50vh;
+    /* height: 100%; */
+}
+
+.newcases{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 55%;
+    height: 100%;
+}
+
+.newcases-head{
+    display: flex;
+    width: 95%;
+}
+
+.newcases-head h1{
+    margin: 0;
+    text-align: left;
+    /* margin-left: 25px; */
+}
+
+.newcases-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 95%;
+    height: 85%;
+    border-radius: 15px;
+    /* background-color: #F8F8F8; */
+    background-color: #F8F8F8;
+}
+
+.newcases-index{
+    display: flex;
+    flex-direction: row;
+}
+
+.newcases-card{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #E1C7AA;
+    margin: 10px 0px;
+    width: 90%;
+    border-radius: 10px;
+}
+
+
+.newcases-card p{
+    text-align: left;
+    width: 200px;
+    font-size: 12px;
+    margin-left: 10px;
+}
+
+.dates{
+    margin-left: 80px;
+}
+
+.cases{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    height: 100%;
+    /* height: 50%; */
+}
+
+.cases-head{
+    display: flex;
+    width: 95%;
+}
+
+.cases-head h1{
+    text-align: left;
+    margin: 0;
+}
+
+.cases-box{
+    width: 95%;
+    height: 85%;
+    border-radius: 15px;
+    background-color: #F8F8F8;
+}
+
