--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     width: 20%;
+    cursor: pointer;
 }
 
 .dashboard-right{
@@ -39,6 +40,7 @@
 
 .logout{
     justify-self:auto;
+
 }
 
 .link {
