--- a/client/src/assets/css/cases.css
+++ b/client/src/assets/css/cases.css
@@ -21,17 +21,12 @@
     justify-self: flex-end;
 }
 
-.cases{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.row{
+    margin-bottom: 32px;
 }
-
-
 .card{
     border-radius: 16px;
     font-family: 'Montserrat', sans-serif;  
-    width: 30%;
     margin: 16px 24px;
     background-color: #f8f8f8;
     box-shadow: 0px 4px 16px 4px rgba(128, 128, 128, 0.219);  
