--- a/client/src/assets/css/casesSection.css
+++ b/client/src/assets/css/casesSection.css
@@ -1,6 +1,9 @@
 .right{
     width: 100%;
     padding: 64px 40px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 80px;
 }
 .right h3{
     text-align: left;
