--- a/client/src/assets/css/casesSection.css
+++ b/client/src/assets/css/casesSection.css
@@ -1,9 +1,12 @@
 .right{
-    width: 100%;
+    position: relative;
+    float: right;
+    width: 80%;
     padding: 64px 40px;
     display: flex;
     flex-direction: column;
     padding-top: 80px;
+    position: fixed;
 }
 .right h3{
     text-align: left;
@@ -13,6 +16,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    width: 100%;
     align-items: center;
 }
 .top h1{
@@ -20,6 +24,9 @@
     color: #C89A69;
 }
 .top p{
+    width: 85%;
+    margin: 0;
+    text-align: right;
     font-size: 20px;
     justify-self: flex-end;
 }
