--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -60,7 +60,7 @@
     width: 100%;
     font-family: 'Montserrat', sans-serif;
     font-size: 28px;
-    margin: 24px auto;
+    margin: 24px;
     margin-left: 44px;
     text-align: start;
 }
@@ -68,7 +68,7 @@
 .link a{
     color: white;
     margin: 0;
-    margin-left: 24px;
+    margin-left: 10px;
 }
 
 .calendar-section{
