--- a/client/src/assets/css/loader.css
+++ b/client/src/assets/css/loader.css
@@ -1,10 +1,10 @@
 /* @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap"); */
-* {
+/* * {
   box-sizing: border-box;
 }
 *::before, *::after {
   box-sizing: border-box;
-}
+} */
 
 
 #container1 {
