--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -75,7 +75,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 50%;
+    height: 70%;
     margin-top: 0px;
 }
 
@@ -149,10 +149,76 @@
 
 .calendar-box{
     display: flex;
-    height: 90%;
+    /* height: 90%; */
+    height: 100vh;
     width: 90%;
     background-color: #F8F8F8;
     border-radius: 10px;
+}
+
+.calendar-circles{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 20px;
+    /* align-items: center; */
+    justify-content: center;
+    /* height: 10vh; */
+}
+
+.circle-rect{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.rect{
+    width: 85px;
+    height: 270px;
+    background-color: #EEDDCABD;
+    margin: 0px 30px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.case-1{
+    margin: 20px 0px;
+}
+
+.case-2{
+    margin: 20px 0px;
+}
+
+.case-1 p{
+    margin: 0;
+    font-size: 17px;
+}
+
+.case-2 p{
+    margin: 0;
+    font-size: 17px;
+}
+
+.circle{
+    height: 85px;
+    width: 85px;
+    background-color: #E1C7AA;
+    margin: 0px 30px;
+    border-radius: 50px 50px 00px 0px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.today{
+    border: 3px solid #C89A69;
+    /* border-radius: 50px; */
+}
+
+.circle p{
+    margin: 0;
+    font-size: 20px;
 }
 
 .newcases{
